<resources>
    <string name="app_name">Салон красоты "Лотос"</string>
    <string name="title_activity_navigation">Лотос</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_masters">Мастера</string>
    <string name="menu_request">Запись на приём</string>
    <string name="menu_phone">Номер телефона</string>
    <string name="menu_vacancy">Ванкансии</string>
    <string name="menu_feedback">Обратная связь</string>
    <string name="not_yet">Данного описания пока нет, перезагрузите страницу.</string>

    <string name="channel_name">Salon_Lotos</string>
    <string name="channel_description">channel for lotos</string>
    <string name="channel_id">LOTOSSALOON</string>


</resources>