<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_masters" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_insert_invitation_24"
            android:title="@string/menu_request" />
        <item
            android:id="@+id/phone"
            android:icon="@drawable/ic_baseline_phone_in_talk_24"
            android:title="@string/menu_phone" />

        <item
            android:id="@+id/vacancy"
            android:icon="@drawable/ic_baseline_fingerprint_24"
            android:title="@string/menu_vacancy" />

    </group>
<group android:checkableBehavior="none">
    <item
        android:id="@+id/nav_feedback"
        android:title="@string/menu_feedback">
        <menu>
            <!--            <item-->
            <!--                android:id="@+id/phone"-->
            <!--                android:icon="@drawable/ic_baseline_phone_in_talk_24"-->
            <!--                android:title="phone"/>-->

        </menu>
    </item>
</group>
</menu>